openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: voting-app
  labels:
    app: voting-app
spec:
  to:
    kind: Service
    name: voting-app
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
